@@ -1,14 +1,15 @@
 package gregtech.core.network.internal;
 
 import gregtech.api.GTValues;
+import gregtech.api.GregTechAPI;
+import gregtech.api.modules.ModuleStage;
 import gregtech.api.network.IClientExecutor;
 import gregtech.api.network.INetworkHandler;
 import gregtech.api.network.IPacket;
 import gregtech.api.network.IServerExecutor;
-import gregtech.api.GregTechAPI;
-import gregtech.api.modules.ModuleStage;
+import gregtech.api.util.GTLog;
 import gregtech.core.CoreModule;
-import io.netty.buffer.Unpooled;
+
 import net.minecraft.client.network.NetHandlerPlayClient;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.player.EntityPlayerMP;
@@ -25,7 +26,12 @@ import net.minecraftforge.fml.common.network.internal.FMLProxyPacket;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
 
-public class NetworkHandler implements INetworkHandler {
+import io.netty.buffer.Unpooled;
+import org.jetbrains.annotations.NotNull;
+
+import java.lang.reflect.InvocationTargetException;
+
+public final class NetworkHandler implements INetworkHandler {
 
     private static final NetworkHandler INSTANCE = new NetworkHandler();
 
@@ -44,7 +50,8 @@ public class NetworkHandler implements INetworkHandler {
 
     public void registerPacket(Class<? extends IPacket> packetClass) {
         if (GregTechAPI.moduleManager.hasPassedStage(ModuleStage.PRE_INIT)) {
-            CoreModule.logger.error("Could not register packet {}, as packet registration has ended!", packetClass.getName());
+            CoreModule.logger.error("Could not register packet {}, as packet registration has ended!",
+                    packetClass.getName());
             return;
         }
 
@@ -52,11 +59,15 @@ public class NetworkHandler implements INetworkHandler {
         boolean hasClientExecutor = IClientExecutor.class.isAssignableFrom(packetClass);
 
         if (hasServerExecutor && hasClientExecutor) {
-            CoreModule.logger.error("Could not register packet {}, as it is both a Server and Client executor! Only one allowed. Skipping...", packetClass.getName());
+            CoreModule.logger.error(
+                    "Could not register packet {}, as it is both a Server and Client executor! Only one allowed. Skipping...",
+                    packetClass.getName());
             return;
         }
         if (!hasServerExecutor && !hasClientExecutor) {
-            CoreModule.logger.error("Could not register packet {}, as it does not have an executor! Must have either IServerExecutor OR IClientExecutor. Skipping...", packetClass.getName());
+            CoreModule.logger.error(
+                    "Could not register packet {}, as it does not have an executor! Must have either IServerExecutor OR IClientExecutor. Skipping...",
+                    packetClass.getName());
             return;
         }
         packetHandler.registerPacket(packetClass);
@@ -99,7 +110,7 @@ public class NetworkHandler implements INetworkHandler {
 
     @SubscribeEvent
     @SideOnly(Side.CLIENT)
-    public void onClientPacket(FMLNetworkEvent.ClientCustomPacketEvent event) throws Exception {
+    public void onClientPacket(FMLNetworkEvent.@NotNull ClientCustomPacketEvent event) throws Exception {
         IPacket packet = toGTPacket(event.getPacket());
         if (IClientExecutor.class.isAssignableFrom(packet.getClass())) {
             IClientExecutor executor = (IClientExecutor) packet;
@@ -114,7 +125,7 @@ public class NetworkHandler implements INetworkHandler {
     }
 
     @SubscribeEvent
-    public void onServerPacket(FMLNetworkEvent.ServerCustomPacketEvent event) throws Exception {
+    public void onServerPacket(FMLNetworkEvent.@NotNull ServerCustomPacketEvent event) throws Exception {
         IPacket packet = toGTPacket(event.getPacket());
         if (IServerExecutor.class.isAssignableFrom(packet.getClass())) {
             IServerExecutor executor = (IServerExecutor) packet;
@@ -128,17 +139,27 @@ public class NetworkHandler implements INetworkHandler {
         }
     }
 
-    private FMLProxyPacket toFMLPacket(IPacket packet) {
+    private @NotNull FMLProxyPacket toFMLPacket(@NotNull IPacket packet) {
         PacketBuffer buf = new PacketBuffer(Unpooled.buffer());
         buf.writeVarInt(packetHandler.getPacketId(packet.getClass()));
         packet.encode(buf);
         return new FMLProxyPacket(buf, GTValues.MODID);
     }
 
-    private IPacket toGTPacket(FMLProxyPacket proxyPacket) throws Exception {
+    private @NotNull IPacket toGTPacket(@NotNull FMLProxyPacket proxyPacket) throws NoSuchMethodException,
+                                                                             InvocationTargetException,
+                                                                             InstantiationException,
+                                                                             IllegalAccessException {
         PacketBuffer payload = (PacketBuffer) proxyPacket.payload();
-        IPacket packet = packetHandler.getPacketClass(payload.readVarInt()).newInstance();
+        var clazz = packetHandler.getPacketClass(payload.readVarInt());
+        IPacket packet = clazz.getConstructor().newInstance();
         packet.decode(payload);
+
+        if (payload.readableBytes() != 0) {
+            GTLog.logger.error(
+                    "NetworkHandler failed to finish reading packet with class {} and {} bytes remaining",
+                    clazz.getName(), payload.readableBytes());
+        }
         return packet;
     }
 }
